--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 
 <H1 align=center><font size=+4>Kevin Knight</font></H1>
 
-<IMG WIDTH=100 ALIGN=RIGHT SRC="pictures/KevinKnight.jpg"> 
+<!-- <IMG WIDTH=100 ALIGN=RIGHT SRC="pictures/KevinKnight.jpg"> -->
+
+<p><align="right">
+<i>When your mother sends back all your invitations</i> <br>
+<i>And your father to your sister he explains</i> <br>
+<i>That you're tired of yourself and all of your creations</i> <br>
+<i>Won't you come see me, Queen Jane?</i> <br>
+</p>
 
 <P>
 E-mail: 
