--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <!-- <IMG WIDTH=100 ALIGN=RIGHT SRC="pictures/KevinKnight.jpg"> -->
 
 <p align="right">
-<i><small>When your mother sends back all your invitations</i> <br>
-<i><small>And your father to your sister he explains</i> <br>
-<i><small>That you're tired of yourself and all of your creations</i> <br>
-<i><small>Won't you come see me, Queen Jane?</i> <br>
+<i><small>When your mother sends back all your invitations</small></i> <br>
+<i><small>And your father to your sister he explains</small></i> <br>
+<i><small>That you're tired of yourself and all of your creations</small></i> <br>
+<i><small>Won't you come see me, Queen Jane?</small></i> <br>
 </p>
 
 <P>
