--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
 <!-- <IMG WIDTH=100 ALIGN=RIGHT SRC="pictures/KevinKnight.jpg"> -->
 
 <p align="right">
-<i><small>When your mother sends back all your invitations</small></i> <br>
-<i><small>And your father to your sister he explains</small></i> <br>
-<i><small>That you're tired of yourself and all of your creations</small></i> <br>
-<i><small>Won't you come see me, Queen Jane?</small></i> <br>
+<i><small><small>Arrest this man, he talks in maths.</small></small></i> <br>
+<i><small><small>- Radiohead</small></small></i> <br> <br>
+
+<i><small><small>When your mother sends back all your invitations</small></small></i> <br>
+<i><small><small>And your father to your sister he explains</small></small></i> <br>
+<i><small><small>That you're tired of yourself and all of your creations</small></small></i> <br>
+<i><small><small></small>Won't you come see me, Queen Jane?</small></small></i> <br>
+<i><small><small>- Bob Dylan</small></small></i>
 </p>
 
 <P>
