--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <i><small><small>When your mother sends back all your invitations</small></small></i> <br>
 <i><small><small>And your father to your sister he explains</small></small></i> <br>
 <i><small><small>That you're tired of yourself and all of your creations</small></small></i> <br>
-<i><small><small></small>Won't you come see me, Queen Jane?</small></small></i> <br>
+<i><small><small>Won't you come see me, Queen Jane?</small></small></i> <br>
 <i><small><small>- Bob Dylan</small></small></i>
 </p>
 
