--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@ vita</A>.
 I recently wrote a <a href="https://a.co/d/1TlDwVs">number theory book</a> 
 (see <a href="math-kook-sample-chapters.pdf">sample chapters</a>), 
 and an <a href="https://www.amazon.com/dp/B0B92HRJWG">art book</a>.
- 
+
+  <p>
+I have number theory channel called <a href="https://www.youtube.com/@mathkook">Math Kook</a>! 
+What's the infamous <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE">Collatz conjecture</a>?
+How many <a href="https://www.youtube.com/watch?v=Jaa4xTUDfek">prime numbers</a> are there?
+
 <p>
 We made a nice site about <A HREF="https://chinesenlp.xyz">Chinese NLP</A>!
 We also co-organized a 
@@ -71,9 +76,6 @@ Co-organized IWSLT 2020, co-Program Chair of First <a href="http://aacl2020.org/
  <p>
   <a HREF="whythanks.mp4">Why, thank you.</a>
  </p>
-
- <p>
-The infamous <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE">Collatz conjecture</a>!
 
 <p>
 <A HREF="pics-cooking">Lockdown food</A> and <A HREF="pics-ballona">view from a bridge</A>.
