--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ Bayesian Inference with Tears:
 Aerial view of <A HREF="pictures/capa-de-algas.jpg">Capa de Algas</A>.
  </p>
 
-<p> The <A HREF="http://stp.lingfil.uu.se/~bea/copiale">Copiale cipher</A>.
+<p> The <A HREF="https://en.wikipedia.org/wiki/Copiale_cipher">Copiale cipher</A>.
 </p>
 
 <p>Here's a bunch of <a href="http://www.isi.edu/projects/nlg/software_1">ISI NLP software</a>. 
