--- a/index.html
+++ b/index.html
@@ -1410,7 +1410,7 @@ McGraw-Hill Book Company, 1991.
 </P>
  
 <p>
-<img src="extra/new-en.gif">  Note: I can't find the above paper.  However, <a href="https://archipel.uqam.ca/144/2/Kodra.htm">here</a> is a contemporaneous take: 
+Note: I can't find the above paper.  However, <a href="https://archipel.uqam.ca/144/2/Kodra.htm">here</a> is a contemporaneous take: 
 "Yet another interesting information relative to explanations in the symbolic/neural debate is that some people at CMU built such a mixed system. 
 The NN was used to take decisions, and the symbolic part was for providing explanations. 
 The explanations were adapted, that is to say bent to fit the answer of the NN (Knight and Gil, 1991). 
