--- a/art/index.html
+++ b/art/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Kevin Knight | Artist</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <!-- Header with Navigation -->
+  <header>
+    <nav class="navbar">
+      <ul>
+        <li><a href="paintings.html">Paintings</a></li>
+        <li><a href="artist-cv.pdf" target="_blank">CV</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+    <div class="hero">
+      <img src="artist-headshot.jpg" alt="Kevin Knight" class="headshot">
+      <h1>Kevin Knight</h1>
+    </div>
+  </header>
+
+  <!-- Main content -->
+  <main>
+    <p class="intro">Welcome to my art portfolio. Browse my paintings and learn more about my work.</p>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Kevin Knight</p>
+  </footer>
+</body>
+</html>
 
