--- a/art/paintings.html
+++ b/art/paintings.html
@@ -32,8 +32,8 @@
                 data-medium="Oil on Canvas" 
                 data-size="24x36" 
                 data-year="2021" 
-                data-full="painting1.png">
-          <img src="painting1.png" alt="Sunset Over Water Thumbnail">
+                data-full="painting1.jpg">
+          <img src="painting1.jpg" alt="Sunset Over Water Thumbnail">
           <figcaption>
             <strong>Sunset Over Water</strong><br>
             Oil on Canvas, 24x36, 2021
@@ -45,8 +45,8 @@
                 data-medium="Acrylic" 
                 data-size="18x24" 
                 data-year="2020" 
-                data-full="painting2.png">
-          <img src="painting2.png" alt="Morning Light Thumbnail">
+                data-full="painting2.jpg">
+          <img src="painting2.jpg" alt="Morning Light Thumbnail">
           <figcaption>
             <strong>Morning Light</strong><br>
             Acrylic, 18x24, 2020
@@ -67,8 +67,8 @@
                 data-medium="Mixed Media" 
                 data-size="30x40" 
                 data-year="2019" 
-                data-full="painting_sold1.png">
-          <img src="painting_sold1.png" alt="Urban Reflections Thumbnail">
+                data-full="painting_sold1.jpg">
+          <img src="painting_sold1.jpg" alt="Urban Reflections Thumbnail">
           <figcaption>
             <strong>Urban Reflections</strong><br>
             Mixed Media, 30x40, 2019
@@ -80,8 +80,8 @@
                 data-medium="Watercolor" 
                 data-size="16x20" 
                 data-year="2022" 
-                data-full="painting_sold2.png">
-          <img src="painting_sold2.png" alt="Quiet Corners Thumbnail">
+                data-full="painting_sold2.jpg">
+          <img src="painting_sold2.jpg" alt="Quiet Corners Thumbnail">
           <figcaption>
             <strong>Quiet Corners</strong><br>
             Watercolor, 16x20, 2022
