--- a/art/paintings.html
+++ b/art/paintings.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="artist-cv.pdf" target="_blank">CV</a></li>
+        <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf" target="_blank">CV</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
