--- a/art/contact.html
+++ b/art/contact.html
@@ -13,7 +13,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="paintings.html">Paintings</a></li>
-        <li><a href="artist-cv.pdf" target="_blank">CV</a></li>
+        <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf" target="_blank">CV</a></li>
       </ul>
     </nav>
     <h1 class="page-title">Contact</h1>
@@ -21,7 +21,7 @@
 
   <!-- Main content -->
   <main>
-    <p>If you wish to contact me, please email: <a href="mailto:kevin.crawford.knight@gmail.com">kevin.crawford.knight@gmail.com</a></p>
+    <p>If you wish to contact me, please email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
   </main>
 
   <!-- Footer -->
