--- a/art/paintings.html
+++ b/art/paintings.html
@@ -92,18 +92,19 @@
     </section>
   </main>
 
-  <!-- Modal for Full Painting View -->
-  <div id="modal" class="modal">
-    <div class="modal-content">
-      <img id="modalImage" src="" alt="">
-      <div class="modal-caption" id="modalCaption"></div>
-      <div class="modal-buttons">
-        <button id="prevBtn">Previous</button>
-        <button id="backBtn">Back to Gallery</button>
-        <button id="nextBtn">Next</button>
-      </div>
+<!-- Modal for Full Painting View -->
+<div id="modal" class="modal">
+  <div class="modal-content">
+    <img id="modalImage" src="" alt="">
+    <div class="modal-caption" id="modalCaption"></div>
+    <div class="modal-buttons">
+      <button id="prevBtn">&#8592;</button>
+      <button id="backBtn">Back</button>
+      <button id="nextBtn">&#8594;</button>
     </div>
   </div>
+</div>
+
 
   <!-- JavaScript for Modal Functionality -->
   <script>
