--- a/art/contact.html
+++ b/art/contact.html
@@ -21,7 +21,7 @@
 
   <!-- Main content -->
   <main>
-    <p>If you wish to contact me, please email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    <p>If you wish to contact me, please email: <a href="mailto:kevin.crawford.knight@gmail.com">kevin.crawford.knight@gmail.com</a></p>
   </main>
 
   <!-- Footer -->
