--- a/art/index.html
+++ b/art/index.html
@@ -13,6 +13,7 @@
       <ul>
         <li><a href="paintings.html">Paintings</a></li>
         <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf" target="_blank">CV</a></li>
+        <li><a href="https://www.amazon.com/dp/B0B92HRJWG" target="_blank">Book</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -24,7 +25,7 @@
 
   <!-- Main content -->
   <main>
-    <p class="intro">Welcome to my art portfolio. Browse my paintings and learn more about my work.</p>
+    <p class="intro">Welcome to my art portfolio.</p>
   </main>
 
   <!-- Footer -->
@@ -33,3 +34,4 @@
   </footer>
 </body>
 </html>
+
