--- a/art/contact.html
+++ b/art/contact.html
@@ -14,6 +14,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="paintings.html">Paintings</a></li>
         <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf" target="_blank">CV</a></li>
+        <li><a href="https://www.amazon.com/dp/B0B92HRJWG" target="_blank">Book</a></li>
       </ul>
     </nav>
     <h1 class="page-title">Contact</h1>
@@ -21,7 +22,7 @@
 
   <!-- Main content -->
   <main>
-    <p>If you wish to contact me, please email: <a href="mailto:kevin.crawford.knight@gmail.com">kevin.crawford.knight@gmail.com</a></p>
+    <p>kevin.crawford.knight@gmail.com</p>
   </main>
 
   <!-- Footer -->
