--- a/art/contact.html
+++ b/art/contact.html
@@ -22,7 +22,9 @@
 
   <!-- Main content -->
   <main>
+    <center>
     <p>kevin.crawford.knight@gmail.com</p>
+      </center>
   </main>
 
   <!-- Footer -->
