--- a/art/paintings.html
+++ b/art/paintings.html
@@ -27,32 +27,73 @@
       <h2>Featured</h2>
       <div class="gallery">
         <!-- Example featured painting -->
-        <figure class="painting" 
-                data-category="featured" 
-                data-title="Starry Night" 
-                data-medium="Oil on Canvas" 
-                data-size="30x40" 
-                data-year="2020" 
-                data-full="painting_featured1.jpg">
-          <img src="painting_featured1.jpg" alt="Starry Night Thumbnail">
-          <figcaption>
-            <strong>Starry Night</strong><br>
-            Oil on Canvas, 30x40, 2020
-          </figcaption>
-        </figure>
-        <figure class="painting" 
-                data-category="featured" 
-                data-title="City Lights" 
-                data-medium="Acrylic" 
-                data-size="24x36" 
-                data-year="2021" 
-                data-full="painting_featured2.jpg">
-          <img src="painting_featured2.jpg" alt="City Lights Thumbnail">
-          <figcaption>
-            <strong>City Lights</strong><br>
-            Acrylic, 24x36, 2021
-          </figcaption>
-        </figure>
+<figure class="painting" 
+data-category="featured" 
+data-title="Cat Searching" 
+data-medium="Oil on Canvas" 
+data-size="30x30" 
+data-year="2020" 
+data-full="cat-searching-30x30.jpg">
+<img src="cat-searching-30x30.jpg" alt="Cat Searching Thumbnail">
+<figcaption>
+<strong>Cat Searching</strong><br>
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="featured" 
+data-title="Moon Surf" 
+data-medium="Oil on Canvas" 
+data-size="30x30" 
+data-year="2024" 
+data-full="moonsurf-30x30.jpg">
+<img src="moonsurf-30x30.jpg" alt="Moon Surf Thumbnail">
+<figcaption>
+<strong>Moon Surf</strong><br>
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="featured" 
+data-title="Lime" 
+data-medium="Oil on Canvas" 
+data-size="30x30" 
+data-year="2021" 
+data-full="lime-30x30.jpg">
+<img src="lime-30x30.jpg" alt="Lime Thumbnail">
+<figcaption>
+<strong>Lime</strong><br>
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="featured" 
+data-title="Coffee" 
+data-medium="Oil on Canvas" 
+data-size="36x36" 
+data-year="2024" 
+data-full="coffee-36x36.jpg">
+<img src="coffee-36x36.jpg" alt="Coffee Thumbnail">
+<figcaption>
+<strong>Coffee</strong><br>
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="featured" 
+data-title="Mandalay" 
+data-medium="Oil on Canvas" 
+data-size="30x30" 
+data-year="2025" 
+data-full="mandalay-30x30.jpg">
+<img src="mandalay-30x30.jpg" alt="Mandalay Thumbnail">
+<figcaption>
+<strong>Mandalay</strong><br>
+</figcaption>
+</figure>
+
+
+        
         <!-- Add more featured painting figures here... -->
       </div>
     </section>
