--- a/art/paintings.html
+++ b/art/paintings.html
@@ -27,7 +27,8 @@
       <h2>Featured</h2>
       <div class="gallery">
         <!-- Example featured painting -->
-<figure class="painting" 
+
+        <figure class="painting" 
 data-category="featured" 
 data-title="Cat Searching" 
 data-medium="Oil on Canvas" 
@@ -91,6 +92,20 @@ data-full="mandalay-30x30.jpg">
 <strong>Mandalay</strong><br>
 </figcaption>
 </figure>
+
+<figure class="painting" 
+data-category="featured" 
+data-title="Go" 
+data-medium="Oil on Canvas" 
+data-size="60x60" 
+data-year="2020" 
+data-full="go-60x60.jpg">
+<img src="go-60x60.jpg" alt="Go Thumbnail">
+<figcaption>
+<strong>Go</strong><br>
+</figcaption>
+</figure>
+
 
 
         
