--- a/art/paintings.html
+++ b/art/paintings.html
@@ -28,7 +28,7 @@
       <div class="gallery">
         <!-- Example featured painting -->
 
-        <figure class="painting" 
+<figure class="painting" 
 data-category="featured" 
 data-title="Cat Searching" 
 data-medium="Oil on Canvas" 
@@ -38,6 +38,7 @@ data-full="cat-searching-30x30.jpg">
 <img src="cat-searching-30x30.jpg" alt="Cat Searching Thumbnail">
 <figcaption>
 <strong>Cat Searching</strong><br>
+oil on canvas, 30x30, 2020
 </figcaption>
 </figure>
 
@@ -51,6 +52,7 @@ data-full="moonsurf-30x30.jpg">
 <img src="moonsurf-30x30.jpg" alt="Moon Surf Thumbnail">
 <figcaption>
 <strong>Moon Surf</strong><br>
+oil on canvas, 30x30, 2024
 </figcaption>
 </figure>
 
@@ -64,6 +66,7 @@ data-full="lime-30x30.jpg">
 <img src="lime-30x30.jpg" alt="Lime Thumbnail">
 <figcaption>
 <strong>Lime</strong><br>
+oil on canvas, 30x30, 2021
 </figcaption>
 </figure>
 
@@ -77,6 +80,7 @@ data-full="coffee-36x36.jpg">
 <img src="coffee-36x36.jpg" alt="Coffee Thumbnail">
 <figcaption>
 <strong>Coffee</strong><br>
+oil on canvas, 36x36, 2024
 </figcaption>
 </figure>
 
@@ -90,6 +94,7 @@ data-full="mandalay-30x30.jpg">
 <img src="mandalay-30x30.jpg" alt="Mandalay Thumbnail">
 <figcaption>
 <strong>Mandalay</strong><br>
+oil on canvas, 30x30, 2025
 </figcaption>
 </figure>
 
@@ -103,8 +108,10 @@ data-full="go-60x60.jpg">
 <img src="go-60x60.jpg" alt="Go Thumbnail">
 <figcaption>
 <strong>Go</strong><br>
+oil on canvas, 60x60, 2020
 </figcaption>
 </figure>
+
 
 
 
