--- a/art/contact.html
+++ b/art/contact.html
@@ -14,7 +14,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="paintings.html">Paintings</a></li>
         <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf" target="_blank">CV</a></li>
-        <li><a href="https://www.amazon.com/dp/B0B92HRJWG" target="_blank">Book</a></li>
+        <li><a href="https://in-theory-originals.github.io/" target="_blank">Book</a></li>
       </ul>
     </nav>
     <h1 class="page-title">Contact</h1>
