--- a/art/paintings.html
+++ b/art/paintings.html
@@ -31,7 +31,7 @@
 <figure class="painting" 
 data-category="featured" 
 data-title="Cat Searching" 
-data-medium="Oil on Canvas" 
+data-medium="oil on Canvas" 
 data-size="30x30" 
 data-year="2020" 
 data-full="cat-searching-30x30.jpg">
@@ -45,7 +45,7 @@ oil on canvas, 30x30, 2020
 <figure class="painting" 
 data-category="featured" 
 data-title="Moon Surf" 
-data-medium="Oil on Canvas" 
+data-medium="oil on Canvas" 
 data-size="30x30" 
 data-year="2024" 
 data-full="moonsurf-30x30.jpg">
@@ -59,7 +59,7 @@ oil on canvas, 30x30, 2024
 <figure class="painting" 
 data-category="featured" 
 data-title="Lime" 
-data-medium="Oil on Canvas" 
+data-medium="oil on Canvas" 
 data-size="30x30" 
 data-year="2021" 
 data-full="lime-30x30.jpg">
@@ -73,7 +73,7 @@ oil on canvas, 30x30, 2021
 <figure class="painting" 
 data-category="featured" 
 data-title="Coffee" 
-data-medium="Oil on Canvas" 
+data-medium="oil on Canvas" 
 data-size="36x36" 
 data-year="2024" 
 data-full="coffee-36x36.jpg">
@@ -87,7 +87,7 @@ oil on canvas, 36x36, 2024
 <figure class="painting" 
 data-category="featured" 
 data-title="Mandalay" 
-data-medium="Oil on Canvas" 
+data-medium="oil on Canvas" 
 data-size="30x30" 
 data-year="2025" 
 data-full="mandalay-30x30.jpg">
@@ -101,7 +101,7 @@ oil on canvas, 30x30, 2025
 <figure class="painting" 
 data-category="featured" 
 data-title="Go" 
-data-medium="Oil on Canvas" 
+data-medium="oil on Canvas" 
 data-size="60x60" 
 data-year="2020" 
 data-full="go-60x60.jpg">
@@ -125,32 +125,92 @@ oil on canvas, 60x60, 2020
       <h2>Available</h2>
       <div class="gallery">
         <!-- Example available painting -->
-        <figure class="painting" 
-                data-category="available" 
-                data-title="Sunset Over Water" 
-                data-medium="Oil on Canvas" 
-                data-size="24x36" 
-                data-year="2021" 
-                data-full="painting1.jpg">
-          <img src="painting1.jpg" alt="Sunset Over Water Thumbnail">
-          <figcaption>
-            <strong>Sunset Over Water</strong><br>
-            Oil on Canvas, 24x36, 2021
-          </figcaption>
-        </figure>
-        <figure class="painting" 
-                data-category="available" 
-                data-title="Morning Light" 
-                data-medium="Acrylic" 
-                data-size="18x24" 
-                data-year="2020" 
-                data-full="painting2.jpg">
-          <img src="painting2.jpg" alt="Morning Light Thumbnail">
-          <figcaption>
-            <strong>Morning Light</strong><br>
-            Acrylic, 18x24, 2020
-          </figcaption>
-        </figure>
+
+
+<figure class="painting" 
+data-category="available" 
+data-title="ArXiv" 
+data-medium="oil on canvas" 
+data-size="30x30" 
+data-year="2016" 
+data-full="arxiv-30x30.jpg">
+<img src="arxiv-30x30.jpg" alt="ArXiv Thumbnail">
+<figcaption>
+<strong>ArXiv</strong><br>
+oil on canvas, 30x30, 2016
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Automaton" 
+data-medium="oil on canvas" 
+data-size="20x30" 
+data-year="2013" 
+data-full="automaton-20x30.jpg">
+<img src="automaton-20x30.jpg" alt="Automaton Thumbnail">
+<figcaption>
+<strong>Automaton</strong><br>
+oil on canvas, 20x30, 2013
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Aztecs" 
+data-medium="oil on canvas" 
+data-size="30x40" 
+data-year="2016" 
+data-full="arxiv-30x40.jpg">
+<img src="arxiv-30x40.jpg" alt="Aztecs Thumbnail">
+<figcaption>
+<strong>Aztecs</strong><br>
+oil on canvas, 30x40, 2016
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Bad Grammar" 
+data-medium="oil on canvas" 
+data-size="30x30" 
+data-year="2014" 
+data-full="bad-grammar-30x30.jpg">
+<img src="bad-grammar-30x30.jpg" alt="Bad Grammar Thumbnail">
+<figcaption>
+<strong>Bad Grammar</strong><br>
+oil on canvas, 30x30, 2014
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Beach" 
+data-medium="oil on canvas" 
+data-size="30x30" 
+data-year="2021" 
+data-full="beach-30x30.jpg">
+<img src="beach-30x30.jpg" alt="Beach Thumbnail">
+<figcaption>
+<strong>Beach</strong><br>
+oil on canvas, 30x30, 2021
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Big Brother" 
+data-medium="oil on canvas" 
+data-size="36x24" 
+data-year="2016" 
+data-full="big-brother-36x24.jpg">
+<img src="big-brother-36x24.jpg" alt="Big Brother Thumbnail">
+<figcaption>
+<strong>Big Brother</strong><br>
+oil on canvas, 36x24, 2016
+</figcaption>
+</figure>
+        
         <!-- Add more available painting figures here... -->
       </div>
     </section>
