--- a/art/paintings.html
+++ b/art/paintings.html
@@ -161,8 +161,8 @@ data-title="Aztecs"
 data-medium="oil on canvas" 
 data-size="30x40" 
 data-year="2016" 
-data-full="arxiv-30x40.jpg">
-<img src="arxiv-30x40.jpg" alt="Aztecs Thumbnail">
+data-full="aztecs-30x40.jpg">
+<img src="aztecs-30x40.jpg" alt="Aztecs Thumbnail">
 <figcaption>
 <strong>Aztecs</strong><br>
 oil on canvas, 30x40, 2016
@@ -208,6 +208,62 @@ data-full="big-brother-36x24.jpg">
 <figcaption>
 <strong>Big Brother</strong><br>
 oil on canvas, 36x24, 2016
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Bizarre Coincidences" 
+data-medium="oil on canvas" 
+data-size="24x36" 
+data-year="2022" 
+data-full="bizarre-coincidences-24x36.jpg">
+<img src="bizarre-coincidences-24x36.jpg" alt="Bizarre Coincidences Thumbnail">
+<figcaption>
+<strong>Bizarre Coincidences</strong><br>
+oil on canvas, 24x36, 2022
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Boba Fett" 
+data-medium="oil on canvas" 
+data-size="30x40" 
+data-year="2015" 
+data-full="boba-fett-30x40.jpg">
+<img src="boba-fett-30x40.jpg" alt="Boba Fett Thumbnail">
+<figcaption>
+<strong>Boba Fett</strong><br>
+oil on canvas, 30x40, 2015
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="But You Could" 
+data-medium="oil on canvas" 
+data-size="36x36" 
+data-year="2013" 
+data-full="but-you-could-36x36.jpg">
+<img src="but-you-could-36x36.jpg" alt="But You Could Thumbnail">
+<figcaption>
+<strong>But You Could</strong><br>
+oil on canvas, 36x36, 2013
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Cassette" 
+data-medium="oil on canvas" 
+data-size="30x30" 
+data-year="2023" 
+data-full="cassette-30x30.jpg">
+<img src="cassette-30x30.jpg" alt="Cassette Thumbnail">
+<figcaption>
+<strong>Cassette</strong><br>
+oil on canvas, 30x30, 2023
 </figcaption>
 </figure>
         
