--- a/art/paintings.html
+++ b/art/paintings.html
@@ -27,8 +27,92 @@
     <section id="featured">
       <h2>Featured</h2>
       <div class="gallery">
-        <!-- (unchanged — show all featured immediately) -->
-        <!-- … your existing <figure class="painting" …> blocks … -->
+
+        <figure class="painting" 
+data-category="featured" 
+data-title="Cat Searching" 
+data-medium="oil on canvas" 
+data-size="30x30" 
+data-year="2020" 
+data-full="cat-searching-30x30.jpg">
+<img src="cat-searching-30x30.jpg" alt="Cat Searching Thumbnail">
+<figcaption>
+<strong>Cat Searching</strong><br>
+oil on canvas, 30x30, 2020
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="featured" 
+data-title="Moon Surf" 
+data-medium="oil on canvas" 
+data-size="30x30" 
+data-year="2024" 
+data-full="moonsurf-30x30.jpg">
+<img src="moonsurf-30x30.jpg" alt="Moon Surf Thumbnail">
+<figcaption>
+<strong>Moon Surf</strong><br>
+oil on canvas, 30x30, 2024
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="featured" 
+data-title="Lime" 
+data-medium="oil on canvas" 
+data-size="30x30" 
+data-year="2021" 
+data-full="lime-30x30.jpg">
+<img src="lime-30x30.jpg" alt="Lime Thumbnail">
+<figcaption>
+<strong>Lime</strong><br>
+oil on canvas, 30x30, 2021
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="featured" 
+data-title="Coffee" 
+data-medium="oil on canvas" 
+data-size="36x36" 
+data-year="2024" 
+data-full="coffee-36x36.jpg">
+<img src="coffee-36x36.jpg" alt="Coffee Thumbnail">
+<figcaption>
+<strong>Coffee</strong><br>
+oil on canvas, 36x36, 2024
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="featured" 
+data-title="Mandalay" 
+data-medium="oil on canvas" 
+data-size="30x30" 
+data-year="2025" 
+data-full="mandalay-30x30.jpg">
+<img src="mandalay-30x30.jpg" alt="Mandalay Thumbnail">
+<figcaption>
+<strong>Mandalay</strong><br>
+oil on canvas, 30x30, 2025
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="featured" 
+data-title="Go" 
+data-medium="oil on canvas" 
+data-size="60x60" 
+data-year="2020" 
+data-full="go-60x60.jpg">
+<img src="go-60x60.jpg" alt="Go Thumbnail">
+<figcaption>
+<strong>Go</strong><br>
+oil on canvas, 60x60, 2020
+</figcaption>
+</figure>
+
+        
       </div>
     </section>
 
@@ -36,9 +120,190 @@
     <section id="available">
       <h2>Available</h2>
       <div class="gallery">
-        <!--  all “available” paintings (none removed)  -->
-        <!--  keep every existing figure so the modal can access them -->
-        <!-- … your existing <figure class="painting" …> blocks … -->
+
+      <figure class="painting" 
+data-category="available" 
+data-title="ArXiv" 
+data-medium="oil on canvas" 
+data-size="30x30" 
+data-year="2016" 
+data-full="arxiv-30x30.jpg">
+<img src="arxiv-30x30.jpg" alt="ArXiv Thumbnail">
+<figcaption>
+<strong>ArXiv</strong><br>
+oil on canvas, 30x30, 2016
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Automaton" 
+data-medium="oil on canvas" 
+data-size="20x30" 
+data-year="2013" 
+data-full="automaton-20x30.jpg">
+<img src="automaton-20x30.jpg" alt="Automaton Thumbnail">
+<figcaption>
+<strong>Automaton</strong><br>
+oil on canvas, 20x30, 2013
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Aztecs" 
+data-medium="oil on canvas" 
+data-size="30x40" 
+data-year="2016" 
+data-full="aztecs-30x40.jpg">
+<img src="aztecs-30x40.jpg" alt="Aztecs Thumbnail">
+<figcaption>
+<strong>Aztecs</strong><br>
+oil on canvas, 30x40, 2016
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Bad Grammar" 
+data-medium="oil on canvas" 
+data-size="30x30" 
+data-year="2014" 
+data-full="bad-grammar-30x30.jpg">
+<img src="bad-grammar-30x30.jpg" alt="Bad Grammar Thumbnail">
+<figcaption>
+<strong>Bad Grammar</strong><br>
+oil on canvas, 30x30, 2014
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Beach" 
+data-medium="oil on canvas" 
+data-size="30x30" 
+data-year="2021" 
+data-full="beach-30x30.jpg">
+<img src="beach-30x30.jpg" alt="Beach Thumbnail">
+<figcaption>
+<strong>Beach</strong><br>
+oil on canvas, 30x30, 2021
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Big Brother" 
+data-medium="oil on canvas" 
+data-size="36x24" 
+data-year="2016" 
+data-full="big-brother-36x24.jpg">
+<img src="big-brother-36x24.jpg" alt="Big Brother Thumbnail">
+<figcaption>
+<strong>Big Brother</strong><br>
+oil on canvas, 36x24, 2016
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Bizarre Coincidences" 
+data-medium="oil on canvas" 
+data-size="24x36" 
+data-year="2022" 
+data-full="bizarre-coincidences-24x36.jpg">
+<img src="bizarre-coincidences-24x36.jpg" alt="Bizarre Coincidences Thumbnail">
+<figcaption>
+<strong>Bizarre Coincidences</strong><br>
+oil on canvas, 24x36, 2022
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Boba Fett" 
+data-medium="oil on canvas" 
+data-size="30x40" 
+data-year="2015" 
+data-full="boba-fett-30x40.jpg">
+<img src="boba-fett-30x40.jpg" alt="Boba Fett Thumbnail">
+<figcaption>
+<strong>Boba Fett</strong><br>
+oil on canvas, 30x40, 2015
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="But You Could" 
+data-medium="oil on canvas" 
+data-size="36x36" 
+data-year="2013" 
+data-full="but-you-could-36x36.jpg">
+<img src="but-you-could-36x36.jpg" alt="But You Could Thumbnail">
+<figcaption>
+<strong>But You Could</strong><br>
+oil on canvas, 36x36, 2013
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Cassette" 
+data-medium="oil on canvas" 
+data-size="30x30" 
+data-year="2023" 
+data-full="cassette-30x30.jpg">
+<img src="cassette-30x30.jpg" alt="Cassette Thumbnail">
+<figcaption>
+<strong>Cassette</strong><br>
+oil on canvas, 30x30, 2023
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Catch Up" 
+data-medium="oil on canvas" 
+data-size="40x30" 
+data-year="2018" 
+data-full="catch-up-with-or-surpass-uk-40x30.jpg">
+<img src="catch-up-with-or-surpass-uk-40x30.jpg" alt="Catch Up Thumbnail">
+<figcaption>
+<strong>Catch Up</strong><br>
+oil on canvas, 40x30, 2018
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Cheers" 
+data-medium="oil on canvas" 
+data-size="30x24" 
+data-year="2017" 
+data-full="cheers-30x24.jpg">
+<img src="cheers-30x24.jpg" alt="Cheers Thumbnail">
+<figcaption>
+<strong>Cheers</strong><br>
+oil on canvas, 30x24, 2017
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Close Up" 
+data-medium="oil on canvas" 
+data-size="28x22" 
+data-year="2019" 
+data-full="close-up-28x22.jpg">
+<img src="close-up-28x22.jpg" alt="Close Up Thumbnail">
+<figcaption>
+<strong>Close Up</strong><br>
+oil on canvas, 28x22, 2019
+</figcaption>
+</figure>
+  
+      
       </div>
     </section>
 
