--- a/art/paintings.html
+++ b/art/paintings.html
@@ -121,7 +121,7 @@ oil on canvas, 60x60, 2020
       <h2>Available</h2>
       <div class="gallery">
 
-      <figure class="painting" 
+<figure class="painting" 
 data-category="available" 
 data-title="ArXiv" 
 data-medium="oil on canvas" 
@@ -295,11 +295,109 @@ data-title="Close Up"
 data-medium="oil on canvas" 
 data-size="28x22" 
 data-year="2019" 
-data-full="close-up-28x22.jpg">
-<img src="close-up-28x22.jpg" alt="Close Up Thumbnail">
+data-full="close-up-28x22.png">
+<img src="close-up-28x22.png" alt="Close Up Thumbnail">
 <figcaption>
 <strong>Close Up</strong><br>
 oil on canvas, 28x22, 2019
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Coffee" 
+data-medium="oil on canvas" 
+data-size="36x36" 
+data-year="2023" 
+data-full="coffee-36x36.png">
+<img src="coffee-36x36.png" alt="Coffee Thumbnail">
+<figcaption>
+<strong>Coffee</strong><br>
+oil on canvas, 36x36, 2023
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Collatz Conjecture" 
+data-medium="oil on canvas" 
+data-size="60x40" 
+data-year="2020" 
+data-full="collatz-conjecture-60x40.jpg">
+<img src="collatz-conjecture-60x40.jpg" alt="Collatz Conjecture Thumbnail">
+<figcaption>
+<strong>Collatz Conjecture</strong><br>
+oil on canvas, 60x40, 2020
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Consistency of Arithmetic" 
+data-medium="oil on canvas" 
+data-size="48x24" 
+data-year="2022" 
+data-full="consistency-of-arithmetic-48x24.jpg">
+<img src="consistency-of-arithmetic-48x24.jpg" alt="Consistency of Arithmetic Thumbnail">
+<figcaption>
+<strong>Consistency of Arithmetic</strong><br>
+oil on canvas, 48x24, 2022
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Cool Britannia" 
+data-medium="oil on canvas" 
+data-size="40x30" 
+data-year="2022" 
+data-full="cool-britannia-40x30.jpg">
+<img src="cool-britannia-40x30.jpg" alt="Cool Britannia Thumbnail">
+<figcaption>
+<strong>Cool Britannia</strong><br>
+oil on canvas, 40x30, 2022
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Coprime" 
+data-medium="oil on canvas" 
+data-size="36x36" 
+data-year="2022" 
+data-full="coprime-36x36.jpg">
+<img src="coprime-36x36.jpg" alt="Coprime Thumbnail">
+<figcaption>
+<strong>Coprime</strong><br>
+oil on canvas, 36x36, 2022
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Crawford-1" 
+data-medium="oil on canvas" 
+data-size="28x22" 
+data-year="2018" 
+data-full="crawford1-28x22.jpg">
+<img src="crawford1-28x22.jpg" alt="Crawford-1 Thumbnail">
+<figcaption>
+<strong>Crawford-1</strong><br>
+oil on canvas, 28x22, 2018
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Crossword" 
+data-medium="oil on canvas" 
+data-size="30x30" 
+data-year="2017" 
+data-full="crawford1-30x30.jpg">
+<img src="crawford1-30x30.jpg" alt="Crossword Thumbnail">
+<figcaption>
+<strong>Crossword</strong><br>
+oil on canvas, 30x30, 2017
 </figcaption>
 </figure>
   
