--- a/art/paintings.html
+++ b/art/paintings.html
@@ -311,8 +311,8 @@ data-title="Coffee"
 data-medium="oil on canvas" 
 data-size="36x36" 
 data-year="2023" 
-data-full="coffee-36x36.png">
-<img src="coffee-36x36.png" alt="Coffee Thumbnail">
+data-full="coffee-36x36.jpg">
+<img src="coffee-36x36.jpg" alt="Coffee Thumbnail">
 <figcaption>
 <strong>Coffee</strong><br>
 oil on canvas, 36x36, 2023
@@ -381,8 +381,8 @@ data-title="Crawford-1"
 data-medium="oil on canvas" 
 data-size="28x22" 
 data-year="2018" 
-data-full="crawford1-28x22.jpg">
-<img src="crawford1-28x22.jpg" alt="Crawford-1 Thumbnail">
+data-full="crawford1-28x22.png">
+<img src="crawford1-28x22.png" alt="Crawford-1 Thumbnail">
 <figcaption>
 <strong>Crawford-1</strong><br>
 oil on canvas, 28x22, 2018
@@ -395,8 +395,8 @@ data-title="Crossword"
 data-medium="oil on canvas" 
 data-size="30x30" 
 data-year="2017" 
-data-full="crawford1-30x30.jpg">
-<img src="crawford1-30x30.jpg" alt="Crossword Thumbnail">
+data-full="crossword-30x30.jpg">
+<img src="crossword-30x30.jpg" alt="Crossword Thumbnail">
 <figcaption>
 <strong>Crossword</strong><br>
 oil on canvas, 30x30, 2017
@@ -428,17 +428,6 @@ oil on canvas, 36x24, 2019
 
       </div>
     </section>
-
-
-
-
-
-
-
-
-
-
-
 
 
 
