--- a/art/paintings.html
+++ b/art/paintings.html
@@ -426,6 +426,48 @@ oil on canvas, 36x24, 2019
 </figcaption>
 </figure>
 
+<figure class="painting" 
+data-category="sold" 
+data-title="Alien Farmers" 
+data-medium="oil on canvas" 
+data-size="28x22" 
+data-year="2020" 
+data-full="alien-farmers-28x22.jpg">
+<img src="alien-farmers-28x22.jpg" alt="Alien Farmers Thumbnail">
+<figcaption>
+<strong>Alien Farmers</strong><br>
+oil on canvas, 28x22, 2020
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="sold" 
+data-title="Cat Searching" 
+data-medium="oil on canvas" 
+data-size="30x30" 
+data-year="2020" 
+data-full="cat-searching-30x30.jpg">
+<img src="cat-searching-30x30.jpg" alt="Cat Searching Thumbnail">
+<figcaption>
+<strong>Cat Searching</strong><br>
+oil on canvas, 30x30, 2020
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="sold" 
+data-title="Cosmic Surf" 
+data-medium="oil on canvas" 
+data-size="30x30" 
+data-year="2021" 
+data-full=cosmic-surf-30x30.jpg">
+<img src="cosmic-surf-30x30.jpg" alt="Cosmic Surf Thumbnail">
+<figcaption>
+<strong>Cosmic Surf</strong><br>
+oil on canvas, 30x30, 2021
+</figcaption>
+</figure>
+
       </div>
     </section>
 
