--- a/art/contact.html
+++ b/art/contact.html
@@ -23,8 +23,10 @@
   <!-- Main content -->
   <main>
     <center>
-    <p>kevin.crawford.knight@gmail.com</p>
-      </center>
+    <p>kevin.crawford.knight@gmail.com</p> 
+    <p>for purchase inquiries:</p> 
+    <p>in.theory.originals@gmail.com</p>
+    </center>
   </main>
 
   <!-- Footer -->
