--- a/art/contact.html
+++ b/art/contact.html
@@ -24,7 +24,9 @@
   <main>
     <center>
     <p>kevin.crawford.knight@gmail.com</p> 
-    <p>for purchase inquiries:</p> 
+      <br><br>
+    <p>purchase inquiries:</p>
+      <br>
     <p>in.theory.originals@gmail.com</p>
     </center>
   </main>
