--- a/art/paintings.html
+++ b/art/paintings.html
@@ -403,7 +403,76 @@ oil on canvas, 30x30, 2017
 </figcaption>
 </figure>
 
-     
+<figure class="painting" 
+data-category="available" 
+data-title="Day Drinking" 
+data-medium="oil on canvas" 
+data-size="30x30" 
+data-year="2022" 
+data-full="day-drinking-30x30.jpg">
+<img src="day-drinking-30x30.jpg" alt="Day Drinking Thumbnail">
+<figcaption>
+<strong>Day Drinking</strong><br>
+oil on canvas, 30x30, 2022
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Defeat Face Recognition" 
+data-medium="oil on canvas" 
+data-size="30x30" 
+data-year="2019" 
+data-full="defeat-face-recognition-30x30.jpg">
+<img src="defeat-face-recognition-30x30.jpg" alt="Defeat Face Recognition Thumbnail">
+<figcaption>
+<strong>Defeat Face Recognition</strong><br>
+oil on canvas, 30x30, 2019
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Defend Cuba Sovereignty 1962" 
+data-medium="oil on canvas" 
+data-size="30x40" 
+data-year="2018" 
+data-full="defend-cuba-sovereignty-1962-30x40.jpg">
+<img src="defend-cuba-sovereignty-1962-30x40.jpg" alt="Defend Cuba Sovereignty 1962 Thumbnail">
+<figcaption>
+<strong>Defend Cuba Sovereignty 1962</strong><br>
+oil on canvas, 30x40, 2018
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Defense Mechanism" 
+data-medium="oil on canvas" 
+data-size="12x36" 
+data-year="2016" 
+data-full="defense-mechanism-12x36.jpg">
+<img src="defense-mechanism-12x36.jpg" alt="Defense Mechanism Thumbnail">
+<figcaption>
+<strong>Defense Mechanism</strong><br>
+oil on canvas, 12x36, 2016
+</figcaption>
+</figure>
+
+<figure class="painting" 
+data-category="available" 
+data-title="Doge" 
+data-medium="oil on canvas" 
+data-size="30x30" 
+data-year="2021" 
+data-full="doge-30x30.jpg">
+<img src="doge-30x30.jpg" alt="Doge Thumbnail">
+<figcaption>
+<strong>Doge</strong><br>
+oil on canvas, 30x30, 2021
+</figcaption>
+</figure>
+        
       </div>
     </section>
 
