--- a/art/paintings.html
+++ b/art/paintings.html
@@ -384,298 +384,75 @@ oil on canvas, 60x60, 2020
       <h2>Sold</h2>
       <div class="gallery">
 
-<figure class="painting" data-category="available" data-title="Not Art But Still Expensive"
-        data-medium="oil on canvas" data-size="36x36" data-year="???"
-        data-full="not-art-but-still-expensive-36x36.jpg">
-  <img src="not-art-but-still-expensive-36x36.jpg" alt="Not Art But Still Expensive Thumbnail">
-  <figcaption><strong>Not Art But Still Expensive</strong><br>oil on canvas, 36x36, ???</figcaption>
+
+<figure class="painting" data-category="sold" data-title="996 Includes an Afternoon Nap"
+        data-medium="oil on canvas" data-size="36x24" data-year="2019"
+        data-full="996-36x24.jpg">
+  <img src="996-36x24.jpg" alt="996 Includes an Afternoon Nap Thumbnail">
+  <figcaption><strong>996 Includes an Afternoon Nap</strong><br>oil on canvas, 36x24, 2019</figcaption>
 </figure>
 
-<figure class="painting" data-category="available" data-title="Mute"
+<figure class="painting" data-category="sold" data-title="Alien Farmers"
+        data-medium="oil on canvas" data-size="28x22" data-year="2020"
+        data-full="alien-farmers-28x22.jpg">
+  <img src="alien-farmers-28x22.jpg" alt="Alien Farmers Thumbnail">
+  <figcaption><strong>Alien Farmers</strong><br>oil on canvas, 28x22, 2020</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Cat Searching"
         data-medium="oil on canvas" data-size="30x30" data-year="2021"
-        data-full="on-mute-30x30.jpg">
-  <img src="on-mute-30x30.jpg" alt="Mute Thumbnail">
-  <figcaption><strong>Mute</strong><br>oil on canvas, 30x30, 2021</figcaption>
+        data-full="cat-searching-30x30.jpg">
+  <img src="cat-searching-30x30.jpg" alt="Cat Searching Thumbnail">
+  <figcaption><strong>Cat Searching</strong><br>oil on canvas, 30x30, 2021</figcaption>
 </figure>
 
-<figure class="painting" data-category="available" data-title="Orange Jacket"
-        data-medium="oil on canvas" data-size="30x30" data-year="???"
-        data-full="orange-jacket-30x30.jpg">
-  <img src="orange-jacket-30x30.jpg" alt="Orange Jacket Thumbnail">
-  <figcaption><strong>Orange Jacket</strong><br>oil on canvas, 30x30, ???</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Phone1"
-        data-medium="oil on canvas" data-size="30x30" data-year="???"
-        data-full="phone1-30x30.jpg">
-  <img src="phone1-30x30.jpg" alt="Phone1 Thumbnail">
-  <figcaption><strong>Phone1</strong><br>oil on canvas, 30x30, ???</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Phone"
-        data-medium="oil on canvas" data-size="40x30" data-year="2013"
-        data-full="phone2-40x30.jpg">
-  <img src="phone2-40x30.jpg" alt="Phone Thumbnail">
-  <figcaption><strong>Phone</strong><br>oil on canvas, 40x30, 2013</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Beijing Sunset"
+<figure class="painting" data-category="sold" data-title="Cosmic Surf"
         data-medium="oil on canvas" data-size="30x30" data-year="2021"
-        data-full="pine-trees-30x30.jpg">
-  <img src="pine-trees-30x30.jpg" alt="Beijing Sunset Thumbnail">
-  <figcaption><strong>Beijing Sunset</strong><br>oil on canvas, 30x30, 2021</figcaption>
+        data-full="cosmic-surf-30x30.jpg">
+  <img src="cosmic-surf-30x30.jpg" alt="Cosmic Surf Thumbnail">
+  <figcaption><strong>Cosmic Surf</strong><br>oil on canvas, 30x30, 2021</figcaption>
 </figure>
 
-<figure class="painting" data-category="available" data-title="Pollution Is The Sign Of A Strong Economy!"
-        data-medium="oil on canvas" data-size="40x30" data-year="2019"
-        data-full="pollution-is-sign-of-strong-economy-40x30.jpg">
-  <img src="pollution-is-sign-of-strong-economy-40x30.jpg" alt="Pollution Is The Sign Of A Strong Economy! Thumbnail">
-  <figcaption><strong>Pollution Is The Sign Of A Strong Economy!</strong><br>oil on canvas, 40x30, 2019</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Princess"
-        data-medium="oil on canvas" data-size="36x36" data-year="???"
-        data-full="princess-36x36.jpg">
-  <img src="princess-36x36.jpg" alt="Princess Thumbnail">
-  <figcaption><strong>Princess</strong><br>oil on canvas, 36x36, ???</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Python"
-        data-medium="oil on canvas" data-size="40x30" data-year="???"
-        data-full="python-40x30.jpg">
-  <img src="python-40x30.jpg" alt="Python Thumbnail">
-  <figcaption><strong>Python</strong><br>oil on canvas, 40x30, ???</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Ramona"
-        data-medium="oil on canvas" data-size="30x30" data-year="2012"
-        data-full="ramona-30x30.jpg">
-  <img src="ramona-30x30.jpg" alt="Ramona Thumbnail">
-  <figcaption><strong>Ramona</strong><br>oil on canvas, 30x30, 2012</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Raven"
-        data-medium="oil on canvas" data-size="36x36" data-year="???"
-        data-full="raven-36x36.jpg">
-  <img src="raven-36x36.jpg" alt="Raven Thumbnail">
-  <figcaption><strong>Raven</strong><br>oil on canvas, 36x36, ???</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Red Mars"
-        data-medium="oil on canvas" data-size="40x60" data-year="2020"
-        data-full="red-mars-40x60.jpg">
-  <img src="red-mars-40x60.jpg" alt="Red Mars Thumbnail">
-  <figcaption><strong>Red Mars</strong><br>oil on canvas, 40x60, 2020</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Selfie #4241"
-        data-medium="oil on canvas" data-size="36x36" data-year="2014"
-        data-full="selfie-36x36.jpg">
-  <img src="selfie-36x36.jpg" alt="Selfie #4241 Thumbnail">
-  <figcaption><strong>Selfie #4241</strong><br>oil on canvas, 36x36, 2014</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Shoulder"
-        data-medium="oil on canvas" data-size="20x16" data-year="???"
-        data-full="shoulder-20x16.png">
-  <img src="shoulder-20x16.png" alt="Shoulder Thumbnail">
-  <figcaption><strong>Shoulder</strong><br>oil on canvas, 20x16, ???</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Shutters"
-        data-medium="oil on canvas" data-size="48x24" data-year="???"
-        data-full="shutters-48x24.jpg">
-  <img src="shutters-48x24.jpg" alt="Shutters Thumbnail">
-  <figcaption><strong>Shutters</strong><br>oil on canvas, 48x24, ???</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Smile"
-        data-medium="oil on canvas" data-size="36x36" data-year="2020"
-        data-full="smile-36x36.jpg">
-  <img src="smile-36x36.jpg" alt="Smile Thumbnail">
-  <figcaption><strong>Smile</strong><br>oil on canvas, 36x36, 2020</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="First Class"
-        data-medium="oil on canvas" data-size="28x22" data-year="2015"
-        data-full="snowden-28x22.jpg">
-  <img src="snowden-28x22.jpg" alt="First Class Thumbnail">
-  <figcaption><strong>First Class</strong><br>oil on canvas, 28x22, 2015</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Snowprints"
-        data-medium="oil on canvas" data-size="30x30" data-year="2019"
-        data-full="snowprints-30x30.jpg">
-  <img src="snowprints-30x30.jpg" alt="Snowprints Thumbnail">
-  <figcaption><strong>Snowprints</strong><br>oil on canvas, 30x30, 2019</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Venice Beach"
-        data-medium="oil on canvas" data-size="40x30" data-year="2019"
-        data-full="socal-40x30.jpg">
-  <img src="socal-40x30.jpg" alt="Venice Beach Thumbnail">
-  <figcaption><strong>Venice Beach</strong><br>oil on canvas, 40x30, 2019</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Soul1"
-        data-medium="oil on canvas" data-size="48x24" data-year="???"
-        data-full="soul1-48x24.jpg">
-  <img src="soul1-48x24.jpg" alt="Soul1 Thumbnail">
-  <figcaption><strong>Soul1</strong><br>oil on canvas, 48x24, ???</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Soul2"
-        data-medium="oil on canvas" data-size="48x24" data-year="???"
-        data-full="soul2-48x24.jpg">
-  <img src="soul2-48x24.jpg" alt="Soul2 Thumbnail">
-  <figcaption><strong>Soul2</strong><br>oil on canvas, 48x24, ???</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Spider Monkey Layer"
-        data-medium="oil on canvas" data-size="30x30" data-year="2019"
-        data-full="spider-monkey-layer-30x30.png">
-  <img src="spider-monkey-layer-30x30.png" alt="Spider Monkey Layer Thumbnail">
-  <figcaption><strong>Spider Monkey Layer</strong><br>oil on canvas, 30x30, 2019</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Movie Review"
+<figure class="painting" data-category="sold" data-title="Southern California"
         data-medium="oil on canvas" data-size="30x30" data-year="2021"
-        data-full="star-wars-is-pretty-good-30x30.JPG">
-  <img src="star-wars-is-pretty-good-30x30.JPG" alt="Movie Review Thumbnail">
-  <figcaption><strong>Movie Review</strong><br>oil on canvas, 30x30, 2021</figcaption>
+        data-full="crawford2-30x30.jpg">
+  <img src="crawford2-30x30.jpg" alt="Southern California Thumbnail">
+  <figcaption><strong>Southern California</strong><br>oil on canvas, 30x30, 2021</figcaption>
 </figure>
 
-<figure class="painting" data-category="available" data-title="Statue"
-        data-medium="oil on canvas" data-size="36x36" data-year="???"
-        data-full="statue-36x36.jpg">
-  <img src="statue-36x36.jpg" alt="Statue Thumbnail">
-  <figcaption><strong>Statue</strong><br>oil on canvas, 36x36, ???</figcaption>
+<figure class="painting" data-category="sold" data-title="Palm Springs"
+        data-medium="oil on canvas" data-size="28x22" data-year="2020"
+        data-full="crawford3-28x22.jpg">
+  <img src="crawford3-28x22.jpg" alt="Palm Springs Thumbnail">
+  <figcaption><strong>Palm Springs</strong><br>oil on canvas, 28x22, 2020</figcaption>
 </figure>
 
-<figure class="painting" data-category="available" data-title="Stop Consuming"
-        data-medium="oil on canvas" data-size="36x36" data-year="???"
-        data-full="stop-consuming-36x36.jpg">
-  <img src="stop-consuming-36x36.jpg" alt="Stop Consuming Thumbnail">
-  <figcaption><strong>Stop Consuming</strong><br>oil on canvas, 36x36, ???</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Stop Losing War"
+<figure class="painting" data-category="sold" data-title="I'm Not Crazy Person, I'm Enthusiasm!"
         data-medium="oil on canvas" data-size="36x36" data-year="2013"
-        data-full="stop-losing-war-36x36.jpg">
-  <img src="stop-losing-war-36x36.jpg" alt="Stop Losing War Thumbnail">
-  <figcaption><strong>Stop Losing War</strong><br>oil on canvas, 36x36, 2013</figcaption>
+        data-full="enthusiasm1-36x36.jpg">
+  <img src="enthusiasm1-36x36.jpg" alt="I'm Not Crazy Person, I'm Enthusiasm! Thumbnail">
+  <figcaption><strong>I'm Not Crazy Person, I'm Enthusiasm!</strong><br>oil on canvas, 36x36, 2013</figcaption>
 </figure>
 
-<figure class="painting" data-category="available" data-title="Surf Hainan"
-        data-medium="oil on canvas" data-size="22x28" data-year="2019"
-        data-full="surf-hainan-22x28.jpg">
-  <img src="surf-hainan-22x28.jpg" alt="Surf Hainan Thumbnail">
-  <figcaption><strong>Surf Hainan</strong><br>oil on canvas, 22x28, 2019</figcaption>
+<figure class="painting" data-category="sold" data-title="Festschrift"
+        data-medium="oil on canvas" data-size="12x36" data-year="2013"
+        data-full="enthusiasm2-12x36.jpg">
+  <img src="enthusiasm2-12x36.jpg" alt="Festschrift Thumbnail">
+  <figcaption><strong>Festschrift</strong><br>oil on canvas, 12x36, 2013</figcaption>
 </figure>
 
-<figure class="painting" data-category="available" data-title="Taylor Swift"
-        data-medium="oil on canvas" data-size="30x30" data-year="2012"
-        data-full="swift-30x30.jpg">
-  <img src="swift-30x30.jpg" alt="Taylor Swift Thumbnail">
-  <figcaption><strong>Taylor Swift</strong><br>oil on canvas, 30x30, 2012</figcaption>
+<figure class="painting" data-category="sold" data-title="Everything I've Encountered is Heaven Sent"
+        data-medium="oil on canvas" data-size="30x30" data-year="2019"
+        data-full="everything-ive-encountered-is-heaven-sent-30x30.jpg">
+  <img src="everything-ive-encountered-is-heaven-sent-30x30.jpg" alt="Everything I've Encountered is Heaven Sent Thumbnail">
+  <figcaption><strong>Everything I've Encountered is Heaven Sent</strong><br>oil on canvas, 30x30, 2019</figcaption>
 </figure>
 
-<figure class="painting" data-category="available" data-title="The More You Pay"
-        data-medium="oil on canvas" data-size="36x36" data-year="2015"
-        data-full="the-more-you-pay-36x36.jpg">
-  <img src="the-more-you-pay-36x36.jpg" alt="The More You Pay Thumbnail">
-  <figcaption><strong>The More You Pay</strong><br>oil on canvas, 36x36, 2015</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Thinking"
-        data-medium="oil on canvas" data-size="30x30" data-year="???"
-        data-full="thinking-30x30.jpg">
-  <img src="thinking-30x30.jpg" alt="Thinking Thumbnail">
-  <figcaption><strong>Thinking</strong><br>oil on canvas, 30x30, ???</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Touareg"
-        data-medium="oil on canvas" data-size="36x18" data-year="2014"
-        data-full="touareg-36x18.jpg">
-  <img src="touareg-36x18.jpg" alt="Touareg Thumbnail">
-  <figcaption><strong>Touareg</strong><br>oil on canvas, 36x18, 2014</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Desert Flight"
-        data-medium="oil on canvas" data-size="30x30" data-year="2012"
-        data-full="uav-30x30.jpg">
-  <img src="uav-30x30.jpg" alt="Desert Flight Thumbnail">
-  <figcaption><strong>Desert Flight</strong><br>oil on canvas, 30x30, 2012</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Viku"
-        data-medium="oil on canvas" data-size="40x30" data-year="???"
-        data-full="viku-40x30.jpg">
-  <img src="viku-40x30.jpg" alt="Viku Thumbnail">
-  <figcaption><strong>Viku</strong><br>oil on canvas, 40x30, ???</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Wait What1"
-        data-medium="oil on canvas" data-size="12x12" data-year="???"
-        data-full="wait-what1-12x12.jpg">
-  <img src="wait-what1-12x12.jpg" alt="Wait What1 Thumbnail">
-  <figcaption><strong>Wait What1</strong><br>oil on canvas, 12x12, ???</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Wait What2"
-        data-medium="oil on canvas" data-size="12x12" data-year="???"
-        data-full="wait-what2-12x12.jpg">
-  <img src="wait-what2-12x12.jpg" alt="Wait What2 Thumbnail">
-  <figcaption><strong>Wait What2</strong><br>oil on canvas, 12x12, ???</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Wang Tiles"
-        data-medium="oil on canvas" data-size="30x30" data-year="???"
-        data-full="wang-tiles-30x30.jpg">
-  <img src="wang-tiles-30x30.jpg" alt="Wang Tiles Thumbnail">
-  <figcaption><strong>Wang Tiles</strong><br>oil on canvas, 30x30, ???</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Warren Weaver"
-        data-medium="oil on canvas" data-size="30x30" data-year="2012"
-        data-full="weaver-30x30.jpg">
-  <img src="weaver-30x30.jpg" alt="Warren Weaver Thumbnail">
-  <figcaption><strong>Warren Weaver</strong><br>oil on canvas, 30x30, 2012</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Warmly Welcome The Success Of The Explosion Of Our First H-Bomb 1952!"
-        data-medium="oil on canvas" data-size="40x30" data-year="2018"
-        data-full="welcome-success-of-first-bomb-40x30.jpg">
-  <img src="welcome-success-of-first-bomb-40x30.jpg" alt="Warmly Welcome The Success Of The Explosion Of Our First H-Bomb 1952! Thumbnail">
-  <figcaption><strong>Warmly Welcome The Success Of The Explosion Of Our First H-Bomb 1952!</strong><br>oil on canvas, 40x30, 2018</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Why Is My Boyfriend In Miami?"
-        data-medium="oil on canvas" data-size="48x60" data-year="2014"
-        data-full="why-is-my-boyfriend-in-miami-48x60.jpg">
-  <img src="why-is-my-boyfriend-in-miami-48x60.jpg" alt="Why Is My Boyfriend In Miami? Thumbnail">
-  <figcaption><strong>Why Is My Boyfriend In Miami?</strong><br>oil on canvas, 48x60, 2014</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="World Internet Service"
-        data-medium="oil on canvas" data-size="30x30" data-year="2021"
-        data-full="world-internet-service-30x30.jpg">
-  <img src="world-internet-service-30x30.jpg" alt="World Internet Service Thumbnail">
-  <figcaption><strong>World Internet Service</strong><br>oil on canvas, 30x30, 2021</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Worry Not Wonder Not"
-        data-medium="oil on canvas" data-size="36x24" data-year="???"
-        data-full="worry-not-wonder-not-36x24.jpg">
-  <img src="worry-not-wonder-not-36x24.jpg" alt="Worry Not Wonder Not Thumbnail">
-  <figcaption><strong>Worry Not Wonder Not</strong><br>oil on canvas, 36x24, ???</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Slip"
-        data-medium="oil on canvas" data-size="24x24" data-year="2012"
-        data-full="yes3-24x24.jpg">
-  <img src="yes3-24x24.jpg" alt="Slip Thumbnail">
-  <figcaption><strong>Slip</strong><br>oil on canvas, 24x24, 2012</figcaption>
+<figure class="painting" data-category="sold" data-title="Growin"
+        data-medium="oil on canvas" data-size="18x18" data-year="???"
+        data-full="growin-18x18.jpg">
+  <img src="growin-18x18.jpg" alt="Growin Thumbnail">
+  <figcaption><strong>Growin</strong><br>oil on canvas, 18x18, ???</figcaption>
 </figure>
 
         
