--- a/art/contact.html
+++ b/art/contact.html
@@ -23,8 +23,8 @@
   <!-- Main content -->
   <main>
     <center>
-      <p>artist contact</p>
-      <br><br>
+      <p>artist contact:</p>
+      <br>
     <p>kevin.crawford.knight@gmail.com</p> 
       <br><br>
     <p>purchase inquiries:</p>
